# context-DB

./: README.md  config.py  database.db  pyproject.toml  requirements.txt
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_users_table.down.sql  002_add_users_table.up.sql
src/: __main__.py  adapters.py  config.py  engine.py  factory.py  logging_config.py  mcp_db_migrate.py  server.py
